# v2x_etsi_asn1

./: .ci_dependencies.yaml  .gitignore  .gitlab-ci.yml  README.md
example/: CMakeLists.txt  README.md  example.cpp
example/test_broker/: Dockerfile  broker_entrypoint.sh  start_broker.sh
v2x_amqp_connector_lib/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  config.cmake.in  package.xml
v2x_amqp_connector_lib/include/v2x_amqp_connector_lib/: logger_setup.h  v2x_amqp_connector_lib.h
v2x_amqp_connector_lib/src/: logger_setup.cpp  v2x_amqp_connector_lib.cpp
v2x_etsi_asn1_lib/: .gitlab-ci.yml  CMakeLists.txt  config.cmake.in  gen_units.py  package.xml
v2x_etsi_asn1_lib/asn1/: CAM-PDU-Descriptions.asn  CPM-OriginatingStationContainers.asn  CPM-PDU-Descriptions.asn  CPM-PerceivedObjectContainer.asn  CPM-PerceptionRegionContainer.asn  CPM-SensorInformationContainer.asn  ETSI-ITS-CDD.asn  TS103561_LUKAS_MCM.asn  VAM-PDU-Descriptions.asn  motorcyclist-special-container.asn
v2x_etsi_asn1_lib/cmake/: collect_asn1c_sources.cmake  proj-extras.cmake.in
v2x_etsi_asn1_lib/include/v2x_etsi_asn1_lib/: logger_setup.h  time_conversions.h  units.h  utils.h  v2x_etsi_asn1_lib.h
v2x_etsi_asn1_lib/src/: logger_setup.cpp  time_conversions.cpp  v2x_etsi_asn1_lib.cpp
v2x_etsi_asn1_lib/test/: main_test.cpp  test_time_conversions.cpp
